sfSandBoxCode/force-app/main/default/objects/Employee_Compensation__c/Employee_Compensation__c.object-meta.xml
<CustomObject>
    <label>Employee Compensation</label>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Compensations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>