sfSandBoxCode/force-app/main/default/objects/Employee_Compensation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>