sfSandBoxCode/force-app/main/default/objects/Employee_Compensation__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rate</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>