sfSandBoxCode/force-app/main/default/objects/Employee_Compensation__c/fields/Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Schedule__c</fullName>
    <label>Pay Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>