sfSandBoxCode/force-app/main/default/objects/Employee_Compensation__c/listViews/HR_Admin_Employee_Compensation.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Employee_Compensation</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>